[package]
name = "apireception"
version = "0.1.0"
authors = ["zzzdong <kuwater@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
hyper = {version="0.14", features=["full"]}
tokio = {version="1.6", features=["full"]}
serde = {version="1", features=["derive"]}
toml = "0.5"
futures = "0.3"
nom = "6"
regex = "1"
url = "2.2"
headers = "0.3"
tower = "0.4"
drain = "0.1"
tokio-rustls = "0.22"
serde_json = "1"
serde_yaml = "0.8"
arc-swap = "1.3"
route-recognizer = "0.3"
rand = "0.8"
thiserror = "1"
hyper-rustls ="0.22"
hyper-timeout = "0.4"
lieweb = { path="../lieweb" }
lazy_static = "1.4"

[patch.crates-io]
route-recognizer = {git="https://github.com/zzzdong/route-recognizer.git", branch="add-at_or_default"}
